2007-05-31  Patti Hoa <patti@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5221920> AXLink is returning a CFString instead of a CFURL for AXURL

        * bridge/mac/WebCoreAXObject.mm:
        (-[WebCoreAXObject accessibilityAttributeValue:]):
        Convert the url string to an NSURL before returning as the AXURLAttribute

2007-05-31  George Staikos  <staikos@kde.org>

        Reviewed by Nikolas.

        Compile again - Qt build.

        * WebCore.pro: header guard added to CSSGrammar.h

2007-05-30  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=13943
        Autogenerate the JS bindings for the CSSStyleSheet

        * DerivedSources.make:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSStyleSheetCustom.cpp:
        (WebCore::toJS):
        * bindings/js/kjs_css.cpp:
        * bindings/js/kjs_css.h:
        * bindings/scripts/CodeGeneratorJS.pm:
        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::addRule):
        (WebCore::CSSStyleSheet::cssRules):
        * css/CSSStyleSheet.h:
        (WebCore::CSSStyleSheet::rules):
        (WebCore::CSSStyleSheet::removeRule):
        * css/CSSStyleSheet.idl:
        * page/DOMWindow.idl:

2007-05-30  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=13937
        Autogenerate the JS bindings for the CSSValue

        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSCSSValueCustom.cpp: Added.
        (WebCore::toJS):
        * bindings/js/kjs_css.cpp:
        * bindings/js/kjs_css.h:
        * bindings/objc/DOMUtility.mm:
        (KJS::createDOMWrapper):
        * bindings/scripts/CodeGeneratorJS.pm:
        * css/CSSValue.h:
        (WebCore::CSSValue::setCssText):
        * css/CSSValue.idl:

2007-05-30  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver the Hun.